Modified tests to match test logs